<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--    Application Name starts here-->
    <string name="app_name">Fall Detector</string>
    <!--    Application Name ends here-->

    <!--    Notification starts here-->
    <string name="notification_title">Fall Detector is running</string>
    <!--    Notification ends here-->

    <!--    Bottom navigation starts here-->
    <string name="bottom_navigation_home_text">Home</string>
    <string name="bottom_navigation_graph_text">Graph</string>
    <string name="bottom_navigation_settings_text">Settings</string>
    <string name="bottom_navigation_contacts_text">Contacts</string>
    <!--    Bottom navigation ends here-->

    <!--    Home Fragment starts here-->
    <string name="home_fragment_title_text">Mobile application for Android platform enabling fall detection</string>
    <string name="home_fragment_author_text" translatable="false">Łukasz Birski</string>
    <string name="home_fragment_supervisor_name_text" translatable="false">dr hab. inż. Marcin Kołodziej</string>
    <string name="home_fragment_city_date_text">Warsaw 2023</string>
    <string name="home_fragment_supervisor_text">thesis supervisor</string>
    <string name="home_fragment_thesis_text">This application was developed as part of Bachelor`s diploma thesis</string>
    <string name="home_fragment_course_text">in the field of study Computer Science and \nspecialisation Applied Computer Science</string>
    <string name="home_fragment_uni_text">Warsaw University of Technology</string>
    <string name="home_fragment_faculty_text">FACULTY OF ELECTRICAL ENGINEERING</string>
    <!--    Home Fragment ends here-->

    <!--    Graph Fragment starts here-->
    <string name="graph_fragment_button_start_text">Start</string>
    <string name="graph_fragment_button_stop_text">Stop</string>
    <string name="graph_fragment_chip_acc_text">ACC.</string>
    <string name="graph_fragment_chip_delta_text">\u0394</string>
    <string name="graph_fragment_x_axis_acc_text">X-axis acceleration</string>
    <string name="graph_fragment_y_axis_acc_text">Y-axis acceleration</string>
    <string name="graph_fragment_z_axis_acc_text">Z-axis acceleration</string>
    <string name="graph_fragment_acceleration_text">Acceleration values:</string>
    <!--    Graph Fragment ends here-->

    <!--    Counter Fragment starts here-->
    <string name="counter_fragment_fall_detected_text">FALL DETECTED!</string>
    <string name="counter_fragment_have_text">You have</string>
    <string name="counter_fragment_abort_text">to abort</string>
    <string name="counter_fragment_ok_text">I\'m OK</string>
    <!--    Counter Fragment starts here-->

    <!--    Sensor starts here-->
    <string name="accelerometer_not_supported_toast_text">ACCELEROMETER IS NOT SUPPORTED!</string>
    <!--    Sensor ends here-->

    <!--    Preferences starts here-->
    <string name="preferences_category_timer_title">Timer</string>
    <string name="preferences_category_algorithm_title">Detection Algorithm</string>
    <string name="preferences_list_timer_title">Timer Length</string>
    <string name="preferences_list_algorithm_title">Select Algorithm</string>
    <string name="preferences_timer_array_one_minute_text">1 minute</string>
    <string name="preferences_timer_array_two_minute_text">2 minute</string>
    <string name="preferences_timer_array_five_minute_text">5 minute</string>
    <string name="preferences_timer_array_ten_minute_text">10 minute</string>
    <string name="preferences_algorithms_array_impact_posture_text">IMPACT + POSTURE</string>
    <string name="preferences_algorithms_array_impact_posture_fall_text">START OF FALL + IMPACT + POSTURE</string>
    <string name="preferences_algorithms_array_impact_velocity_posture_fall_text">START OF FALL + VELOCITY + IMPACT + POSTURE</string>
    <string name="preferences_category_alert_title">Sending notifications</string>
    <string name="preferences_send_messages_title_text">Send messages</string>
    <!--    Preferences ends here-->

    <!--    Drawer starts here-->
    <string name="navigation_drawer_open_text">Navigation drawer is open</string>
    <string name="navigation_drawer_closed_text">Navigation drawer is closed</string>
    <!--    Drawer ends here-->

    <!--    Message Sender starts here-->
    <string name="message_sender_text_body">I had an accident and I need help! My location: %1$s, GPS: %2$s, %3$s</string>
    <string name="message_sender_all_message_sent_text">All SMS have been sent</string>
    <string name="message_sender_message_sent_text">SMS sent</string>
    <string name="message_sender_error_when_sending_text">Failure while sending message</string>
    <string name="message_sender_message_delivered_text">SMS delivered</string>
    <string name="message_sender_message_not_delivered_text">SMS not delivered</string>
    <!--    Message Sender ends here-->

    <!--    Permission Dialog starts here-->
    <string name="permission_dialog_title_text">WARNING!</string>
    <string name="permission_dialog_dismiss_text">DISMISS</string>
    <string name="permission_dialog_message_text">You have not granted application permissions. The app will ask for them once more. Lack of consent will prevent the normal functioning of the application.</string>
    <!--    Permission Dialog ends here-->

    <!--    Add Contact Dialog starts here-->
    <string name="contact_dialog_title_text">Add contact</string>
    <string name="contact_dialog_cancel_text">Cancel</string>
    <string name="contact_dialog_add_text">Add</string>
    <string name="contact_dialog_name_text">Name:</string>
    <string name="contact_dialog_surname_text">Last name:</string>
    <string name="contact_dialog_phone_text">Phone:</string>
    <string name="contact_dialog_plus_text">+</string>
    <!--    Add Contact Dialog ends here-->

    <!--    Remove Contact Dialog starts here-->
    <string name="remove_contact_dialog_title_text">Contact removal</string>
    <string name="remove_contact_dialog_message_text">Do you want to delete the contact to \"%1$s %2$s\"</string>
    <string name="remove_contact_dialog_cancel_text">Cancel</string>
    <string name="remove_contact_dialog_remove_text">Remove</string>
    <!--    Remove Contact Dialog ends here-->

    <!--    Time Out Dialog starts here-->
    <string name="time_out_dialog_exit_text">Exit</string>
    <!--    Time Out Dialog ends here-->

    <!--    Contacts Fragment starts here-->
    <string name="contacts_fragment_recycler_title_text">Name / Telephone</string>
    <string name="contacts_fragment_contacts_text">List of contacts</string>
    <!--    Contacts Fragment ends here-->

    <!--    LocationTracker starts here-->
    <string name="location_tracker_toast_text">No Service Provider is available</string>
    <string name="location_tracker_dialog_title_text">GPS is not Enabled!</string>
    <string name="location_tracker_dialog_message_text">Do you want to turn on GPS?</string>
    <string name="location_tracker_dialog_yes_text">Yes</string>
    <string name="location_tracker_dialog_no_text">No</string>
    <!--    LocationTracker ends here-->

    <!--    Time Out Dialog starts here-->
    <string name="time_our_dialog_counter_time_out_text">Counter time out</string>
    <string name="time_our_dialog_message_sent_text">Message has been sent to all contact persons!</string>
    <!--    Time Out Dialog ends here-->

    <!--    SharedPreferences starts here-->
    <string name="shared_preferences_timer_length_list_key" translatable="false">pl.birski.falldetector.timer_length_list_key</string>
    <string name="shared_preferences_detection_algorithms_list_key" translatable="false">pl.birski.falldetector.detection_algorithms_list_key</string>
    <string name="shared_preferences_send_message_key" translatable="false">pl.birski.falldetector.send_message_key</string>
    <!--    SharedPreferences ends here-->

    <!--    Templates start here-->
    <string name="template_phone_number" translatable="false">%1$s %2$s</string>
    <string name="template_person_name" translatable="false">%1$s %2$s</string>
    <!--    Templates end here-->

</resources>
