<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/nameLinearLayout"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/contact_dialog_name_text" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/surnameLinearLayout"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/surnameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/contact_dialog_surname_text" />

            <EditText
                android:id="@+id/surnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneLinearLayout"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/contact_dialog_phone_text" />

            <TextView
                android:id="@+id/prefixTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.45"
                android:gravity="end"
                android:text="@string/contact_dialog_plus_text" />

            <EditText
                android:id="@+id/prefixEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:imeOptions="actionDone"
                android:maxLength="2"
                android:inputType="number" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:maxLength="9"
                android:imeOptions="actionDone"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>

</layout>