<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="3dp"
        android:elevation="1dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/personTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                tools:text="Jan Nowak" />

            <TextView
                android:id="@+id/numberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="0.95"
                tools:text="+48 123456789" />

            <ImageView
                android:id="@+id/removeContact"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_baseline_remove_circle" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>